--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <h1> My Favorite Pictures! </h1>
+        <h1> My Favorite Negros! </h1>
     </head>
     <body>
      <div class="images">
