--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
      <div class="images">
+         <img src="shiv">
         <img src="cool1.jpg">
         <img src="cool2.jpg">
         <img src="cool3.jpg">
