--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <h1> My Favorite Nice Friends! </h1>
     </head>
     <body>
-     
+     <p> My name shiv! When I was about 13 I LOVED angry birds, I had every game and bought every toy they had. One day I was playing angry birds when all of a sudden the big red bird turned me on. I couldn’t stand it, I was going crazy. I decided to pull out my big long Willy and start jerking. I never had felt so good, I soon continued to do this daily and never got bored of it! That big red bird was so hot and those blue ones were some cuties. I am glad to admit I still do this to this very day.</p>
+        <p>Here is a picture of me!</p>
      <div class="images">
          <img src="shiv.jpg">
         <img src="cool1.jpg">
